# injected

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  Makefile  README.md  goose.yaml  mypy.ini  pyproject.toml  requirements.txt  ruff.toml  setup.cfg
.github/: CONTRIBUTING.md
.github/workflows/: ci.yaml  release.yaml
.goose/check-manifest/: manifest.json  requirements.txt
.goose/node/: manifest.json  package-lock.json
.goose/python/: manifest.json  requirements.txt
src/injected/: __init__.py  _base.py  _errors.py  base.py
tests/: test_base.py  test_base.yaml
