[build-system]
requires = ["setuptools>=57.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
target-version = ["py310"]

[tool.pytest.ini_options]
norecursedirs = ["examples"]
testpaths = ["tests", "src"]
addopts = "--mypy-ini-file=setup.cfg --mypy-only-local-stub --doctest-modules"
asyncio_mode = "auto"
